{
  "version": 4,
  "terraform_version": "1.5.3",
  "serial": 299,
  "lineage": "2c2bbe22-0674-012d-1a06-2fd080180404",
  "resources": [
    {
      "module": "module.cluster",
      "mode": "data",
      "type": "aws_subnet",
      "name": "selected",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:subnet/subnet-0d196beb5d59735f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "available_ip_address_count": 251,
            "cidr_block": "10.222.0.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d196beb5d59735f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "480936841767",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Name": "interface-test-public-001/az1",
              "Owner": "mark",
              "Project": "interface_test",
              "module.terraform.io/full-name": "terraform-aws-network/subnet-group",
              "module.terraform.io/instance": "interface-test-public",
              "module.terraform.io/name": "subnet-group",
              "module.terraform.io/package": "terraform-aws-network",
              "module.terraform.io/version": "0.24.0"
            },
            "vpc_id": "vpc-061d391c2c51349fc"
          }
        }
      ]
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "pod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-0589b758f9c6b20eb",
            "description": "Security Group for EKS Control Plane.",
            "egress": [],
            "id": "sg-0589b758f9c6b20eb",
            "ingress": [],
            "name": "eks-interface-test-control-plane",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-control-plane",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-control-plane",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ephemeral/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with nodes.",
            "from_port": 1025,
            "id": "sgrule-2623075129",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "ephemeral/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow control plane to ephemrally communicate with pods.",
            "from_port": 1025,
            "id": "sgrule-3722411747",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 65535,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__control_plane",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "cluster-api/cidrs",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.222.0.0/16"
            ],
            "description": "Allow CIDRs to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-3876165693",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/nodes",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow nodes to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-2888194624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-036691aa0243bcbaa",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        },
        {
          "index_key": "cluster-api/pods",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the cluster API server.",
            "from_port": 443,
            "id": "sgrule-3986806682",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0589b758f9c6b20eb",
            "self": false,
            "source_security_group_id": "sg-07f9327f92d82416e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.network",
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__control_plane.aws_security_group.this",
            "module.cluster.module.security_group__node.aws_security_group.this",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-036691aa0243bcbaa",
            "description": "Security Group for all nodes in the EKS cluster.",
            "egress": [],
            "id": "sg-036691aa0243bcbaa",
            "ingress": [],
            "name": "eks-interface-test-node",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-node",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-node",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:480936841767:security-group/sg-07f9327f92d82416e",
            "description": "Security Group for all pods in the EKS cluster.",
            "egress": [],
            "id": "sg-07f9327f92d82416e",
            "ingress": [],
            "name": "eks-interface-test-pod",
            "name_prefix": "",
            "owner_id": "480936841767",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-interface-test-pod",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "tags_all": {
              "Name": "eks-interface-test-pod",
              "kubernetes.io/cluster/interface-test": "owned",
              "module.terraform.io/full-name": "terraform-aws-container/eks-cluster",
              "module.terraform.io/instance": "interface-test",
              "module.terraform.io/name": "eks-cluster",
              "module.terraform.io/package": "terraform-aws-container",
              "module.terraform.io/version": "0.14.0"
            },
            "timeouts": null,
            "vpc_id": "vpc-061d391c2c51349fc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.cluster.module.security_group__pod",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all/all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow pods to communicate to the Internet.",
            "from_port": 0,
            "id": "sgrule-3820761083",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-07f9327f92d82416e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.cluster.data.aws_subnet.selected",
            "module.cluster.module.security_group__pod.aws_security_group.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_group__node",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    }
  ]
}